[Silver IV] Title: 큐 2, Time: 1508 ms, Memory: 407896 KB -BaekjoonHub